CB-25174 - 1. This rolls back additional disks that were added if attachment of the added disks fail. For this I have added a new field in the VolumeSetAttributes.Volume class to indicate the status of the volume that was created. This will not break any existing cluster provision steps and I have tested it out. 2. I have also updated the modify disk update flow so that the for AWS, disk type update is optional. 3. Added unit test cases
CB-25174 - review comments